packages/typ/tests/fixtures/diagnostics/0923_gadt_witness_branch_return_mismatch_07.ml.expected
File "0923_gadt_witness_branch_return_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0923_gadt_witness_branch_return_mismatch_07 is not a valid module name.

File "0923_gadt_witness_branch_return_mismatch_07.ml", line 6, characters 16-20:
6 |   | WInt_eta -> true
                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       a
